# ETL_Transporte_Florestal

./: .gitignore  README.md  dashboard.py  etl.py  pipeline.py  pyproject.toml  requirements.txt
