[project]
name = "etl-transportes-florestais"
version = "0.1.0"
description = ""
authors = [
    {name = "VanthuirMaia",email = "vanmaiasf@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.5"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pandera (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
